--- a/app/src/main/res/layout/popup_length_entry_inches.xml
+++ b/app/src/main/res/layout/popup_length_entry_inches.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -16,21 +15,17 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <!-- Popup Title -->
-
         <TextView
             android:id="@+id/txtPopupTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/title_weight_lbs_oz"
-            android:textSize="25sp"
             android:layout_gravity="center"
             android:gravity="center"
+            android:text="@string/enter_catch_details_inches"
             android:textColor="@color/black"
+            android:textSize="22sp"
             android:textStyle="bold"
-            android:background="@color/clip_yellow"
-            android:layout_marginBottom="10dp"/>
-
-        <!-- Species Spinner -->
+            android:background="@color/Log_red"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -44,8 +39,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="5dp"
+                android:layout_marginEnd="10dp"
                 android:layout_marginBottom="5dp"
-                android:layout_marginEnd="20dp"
                 android:gravity="left"
                 android:text="@string/select_species"
                 android:textColor="@color/black"
@@ -53,7 +48,7 @@
                 android:textStyle="bold" />
 
             <Spinner
-                android:id="@+id/spinnerSpeciesPopUp"
+                android:id="@+id/spinnerInchesSpeciesPopUp"
                 android:layout_width="wrap_content"
                 android:layout_height="60dp"
                 android:layout_gravity="center"
@@ -65,7 +60,6 @@
                 android:textStyle="bold" />
 
         </LinearLayout>
-
         <!-- separation bar  -->
         <View
             android:id="@+id/divider"
@@ -78,47 +72,46 @@
             android:id="@+id/textView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/enter_catch_lbs_and_ozs"
+            android:text="@string/enter_inches_and_8ths"
             android:textColor="@color/black"
             android:gravity="center"
             android:layout_marginTop="10dp"/>
+        <!-- Weight Input (Lbs/Ozs) -->
 
         <LinearLayout
             android:id="@+id/layoutWeightLbsOzs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:outlineProvider="background"
+            android:paddingVertical="10dp"
             android:visibility="visible">
 
-            <!-- ENTER Lbs and Ozs  -->
             <EditText
-                android:id="@+id/edtWeightLbs"
+                android:id="@+id/edtLengthInches"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:hint=" -Lbs-  0 to 99Lbs"
+                android:hint="@string/inches"
                 android:inputType="number"
                 android:textColor="@color/black"
                 android:gravity="center"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"/>
 
             <EditText
-                android:id="@+id/edtWeightOzs"
+                android:id="@+id/edtLength8ths"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:hint="    -Ozs-  0 to 15Ozs"
+                android:hint="@string/_8ths_of_inch"
                 android:inputType="number"
                 android:textColor="@color/black"
                 android:gravity="center"
                 android:textSize="20sp"
-                android:textStyle="bold" />
-
+                android:textStyle="bold"/>
         </LinearLayout>
 
-
-        <!-- SAVE CATCH  btn -->
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -131,7 +124,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Lbs"
+                android:text="Inches"
                 android:gravity="center"
                 android:textColor="@color/black"
                 android:textSize="16sp"
@@ -142,18 +135,19 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Ozs"
+                android:text="8ths"
                 android:gravity="center"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold"/>
 
         </LinearLayout>
-
-        <!-- SAVE btn  -->
+        <!-- Save and Cancel Buttons -->
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:gravity="center"
             android:orientation="horizontal">
 
             <Button
@@ -169,7 +163,7 @@
                 android:textStyle="bold" />
 
             <Button
-                android:id="@+id/btnSaveWeight"
+                android:id="@+id/btnSaveCatch"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -181,7 +175,5 @@
 
         </LinearLayout>
 
-        <!-- CANCEL btn  -->
     </LinearLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
