--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,16 @@
     android:contentDescription="@string/tournament_activity_description">
 
 
-
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/app_image_description"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/vcc_app_icon_lng" />
 
     <Button
         android:id="@+id/btnSetUp11"
@@ -16,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="135dp"
         android:layout_marginEnd="115dp"
-        android:layout_marginBottom="104dp"
+        android:layout_marginBottom="150dp"
         android:background="@color/softlock_blue"
         android:gravity="center"
         android:shadowColor="#8FC16D"
@@ -26,19 +35,37 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.4"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="TouchTargetSizeCheck" />
 
-    <ImageView
-        android:id="@+id/imageView2"
+    <View
+        android:id="@+id/divider6"
+        android:layout_width="0dp"
+        android:layout_height="5dp"
+        android:layout_marginVertical="20dp"
+        android:background="@color/black"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btnSetUp11" />
+
+    <Button
+        android:id="@+id/btnUserPage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginVertical="20dp"
+        android:background="@color/softlock_green"
+        android:gravity="center"
+        android:shadowColor="#8FC16D"
+        android:text="@string/user_training_page"
+        android:textColor="@color/clip_white"
+        android:textSize="28sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/vcc_app_icon_lng" />
+        app:layout_constraintHorizontal_bias="0.17"
+        app:layout_constraintStart_toStartOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@id/divider6" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
