--- a/app/src/main/res/layout/activity_tournament_view_kgs.xml
+++ b/app/src/main/res/layout/activity_tournament_view_kgs.xml
@@ -15,6 +15,7 @@
         android:layout_height="0dp"
         android:layout_marginStart="100dp"
         android:layout_marginTop="5dp"
+        android:contentDescription="@string/app_image_description"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.085"
         app:layout_constraintHorizontal_bias="0.494"
@@ -27,7 +28,7 @@
         android:id="@+id/btnKgsStartFishing"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="10px"
+        android:layout_marginTop="10dp"
         android:background="@color/softlock_blue"
         android:gravity="center"
         android:shadowColor="#8FC16D"
