--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#FF0000</color>
+    <color name="bright_red">#F0FA2323</color>
     <color name="lime">#00FF00</color>
     <color name="blue">#0000FF</color>
     <color name="yellow">#FFFF00</color>
@@ -11,9 +12,11 @@
     <color name="magenta_fuchsia">#FF00FF</color>
     <color name="silver">#C0C0C0</color>
     <color name="grey">#808080</color>
+    <color name="lite_grey">#DFAEACAC</color>
     <color name="maroon">#800000</color>
     <color name="olive">#808000</color>
     <color name="green">#008000</color>
+    <color name="bright_green">#EB24A108</color>
     <color name="purple">#800080</color>
     <color name="teal">#008080</color>
     <color name="navy">#000080</color>
@@ -48,7 +51,7 @@
     <color name="Log_yellow_secondary">#80DACF05</color>
     <color name="Log_green">#8000800D</color>
     <color name="Log_green_secondary">#806EA603</color>
-    <color name="Log_blue">#800505CC</color>
+    <color name="Log_blue">#9F0505E8</color>
     <color name="Log_blue_secondary">#6D03258A</color>
     <color name="Log_white">#85FDFDFD</color>
     <color name="Log_orange">#80FE671E</color>
